--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AcmeGradeFinalAssessment</string>
+    <string name="app_name">Online Shopping</string>
     <string name="title_activity_registration">RegistrationActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
